- Fix PAYG operator section  - Fix CTA sidebar to make full width on Mobile  - New Pass section for mobile view. Pass hidden unless label clicked  - Hide CTA's on mobile view

--- a/css/compiled/ticketing.css
+++ b/css/compiled/ticketing.css
@@ -215,6 +215,12 @@
 .ticketing-page .hideSave {
   display: none;
 }
+.ticketing-page label.blue {
+  color: #009DE0;
+}
+.ticketing-page .mobile-only .stylized-select {
+  margin: 15px 0 0 0;
+}
 .ticketing-page .ng-modal-dialog {
   display: block;
   width: 600px;
