--- a/css/sass/_search-page.scss
+++ b/css/sass/_search-page.scss
@@ -92,6 +92,9 @@ label.plain-small{
   .hideCheck{display:none}
   .hideSave{display:none}
 
+  label.blue{color: #009DE0;}
+  .mobile-only .stylized-select{margin: 15px 0 0 0;}
+
   /* Modal Styling */
 
   .ng-modal-dialog {
